# neat-mt

./: .gitignore  .numba_config.yaml  CMakeLists - Windows.txt  CMakeLists.txt  README.md  _neatfast_shortcut.lnk  big_idea.py  boost_tbp.cpp  build.bat  builder.py  config-feedforward  constants.py  eom.py  ephemeris_test.py  install_instructions.txt  makeLastTraj.bat  makeLastTraj.py  make_last_traj_timing_info  missed_thrust.py  neat_mt.py  neat_mt_timing_info.txt  nnet.py  orbit_util.py  plotter.py  test_orbit_class.py  timing_tester.bat  timing_tester.py  traj_config.py  traj_data.hdf5  traj_runner.py  trajectory.py  visualize.py  winner-feedforward  winner-feedforward - Copy
_neatfast/: activations.py  attributes.py  config.py  genes.py  population.py  reporting.py  reproduction.py  species.py  visualize.py
_neatfast/ctrnn/: __init__.py
_neatfast/nn/: feed_forward.py
_vallado/: CMakeLists - static.txt  CMakeLists.txt  DTM_12.h  EopSpw.h  SGP4.h  SGP4DC.h  ast2Body.cpp  ast2Body.h  astIOD.cpp  astIOD.h  astMath.h  astTime.cpp  coordFK5.h  extra_code.cpp  test_vallado.cpp
archive/: CMakeLists - full.txt  boost_tbp.cpp  cmake_notes.rst  cpp_test.cpp  eom.py  ephemeris_test.py  sensitivity_optimizer.m  traj_runner.py  trajectory.py
archive/Linux boost instructions/: CMakeLists.txt  boost_install_commands  build.sh  install_instructions
archive/_neatfast/: __init__.py  aggregations.py  checkpoint.py  genome.py  math_util.py  parallel.py  population.py  statistics.py
archive/neatfast_desktop_2021_02_08_15_01/: parallel.py  population.py
archive/neatfast_desktop_2021_02_08_15_01/nn/: __init__.py
archive/neatfast_laptop_2021_02_08_14_36/: reproduction.py  stagnation.py
archive/neatfast_laptop_2021_02_08_14_36/iznn/: __init__.py
archive/neatfast_laptop_2021_02_08_14_36/nn/: recurrent.py
archive/vallado_codes/astiod/astIOD/: astIOD.vcxproj
config/: config_coarse  config_default  config_final  config_intermediate  config_tests.xlsx  hyperparameters.paulfig
results/: neat_mt_timing_info  network_coarse.txt  network_final.txt  network_intermediate.txt  population_coarse  population_final  population_intermediate  traj_data_coarse.hdf5  traj_data_default.hdf5  traj_data_final.hdf5  traj_data_intermediate.hdf5  winner  winner_coarse  winner_final  winner_intermediate  winner_tmp
tests/: orbit_util_tests.py
